# oas-forge

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
examples/: Cargo.toml
examples/microservice/: Cargo.toml  build.rs  openapi.yaml
examples/microservice/src/: main.rs  root.yaml
examples/shared-models/: Cargo.toml  build.rs  shared_openapi_fragments.yaml
examples/shared-models/src/: lib.rs
src/: config.rs  doc_parser.rs  dsl.rs  error.rs  generics.rs  index.rs  lib.rs  main.rs  merger.rs  preprocessor.rs  scanner.rs  type_mapper.rs  visitor.rs
tests/: bug_enum_validation.rs  casing_coverage.rs  dsl_coverage.rs  exports_test.rs  generics_coverage.rs  integration_test.rs  merger_coverage.rs  reproduction_enum_tag.rs  robustness_enum.rs  scanner_coverage.rs  serde_coverage.rs  v0_1_2_tests.rs  validation_attributes.rs  virtual_routes.rs  visitor_coverage.rs
